--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <label>Set The Maximum Number Of Random Values (2-10000)</label>
             <input id="maxnum" type="number" min="2" max="10000" value="100"/>
             <button id="close">Regenerate</button>
-            <button id="back">Back&emsp;(Non-Regenerate)</button>
+            <button id="back">Back<br>(Non-Regenerate)</button>
         </div>
 
         <button id="generate">Generate</button>
